# PoSkuBridge

./: .gitignore  README.md  logic.md  main.py  pyproject.toml  roadmap.md
src/: main.py
src/core/: __init__.py  app.py  backup.py  config.py  database.py  exporter.py  logger.py  matcher.py  pdf_parser.py  settings.py  setup.py  workers.py
src/gui/: application.py  options.py  widgets.py
src/gui/tabs/: __init__.py  add_code.py  dashboard.py  registry.py  review.py
src/gui/widgets/: options_widgets.py  registry_widgets.py  review_widgets.py
src/lib/: data.py  files.py  mappings.py  text.py  time.py
src/tools/: __init__.py  catalog_generator.py  po_generator.py  tests.py  wipe_data.py
