[project]
name = "poskubridge"
version = "0.1.0"
description = ""
authors = [
    {name = "darius alexandru",email = "darius.alexandru2202@gmail.com"}
]
license = {text = "LICENSE"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pandas>=2.3.3,<3.0.0",
    "openpyxl>=3.1.5,<4.0.0",
    "faker>=39.0.0,<40.0.0",
    "reportlab>=4.4.7,<5.0.0",
    "pdfplumber>=0.11.8,<0.12.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
